[gd_scene load_steps=15 format=3 uid="uid://cejatt12ddojf"]

[ext_resource type="Script" uid="uid://i7ngkgvekba1" path="res://scripts/new_character_select.gd" id="1_c5uuy"]
[ext_resource type="Texture2D" uid="uid://c7bn1gnx4b71v" path="res://assets/grassy pixelated.jpg" id="2_kjqh1"]
[ext_resource type="Script" uid="uid://4eb43uwdg710" path="res://addons/tnowe_extra_controls/elements/draggable.gd" id="3_l2ywx"]
[ext_resource type="Texture2D" uid="uid://bmymytp4nutcm" path="res://assets/kent/fire.webp" id="4_p148i"]
[ext_resource type="Texture2D" uid="uid://lusgwdgw1no1" path="res://assets/Blastoise.png" id="5_i4hyv"]
[ext_resource type="Texture2D" uid="uid://dr5buhafiup2r" path="res://assets/venasaur (2).png" id="6_2gi26"]
[ext_resource type="Texture2D" uid="uid://dmsixe7n4f266" path="res://assets/pikachu.png" id="7_0rorh"]
[ext_resource type="PackedScene" uid="uid://sdwnoh61gawa" path="res://scenes/reusables/skill_info.tscn" id="8_hnda8"]

[sub_resource type="LabelSettings" id="LabelSettings_tbrfe"]
font_size = 42
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_g3rqs"]
load_path = "res://.godot/imported/golem.png-4ecf06b627a0b206e6315fdbd8983774.ctex"

[sub_resource type="LabelSettings" id="LabelSettings_ghnwa"]
font_size = 72
outline_size = 14
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_p148i"]
font_size = 41
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vlp3o"]
font_size = 46
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0i11v"]
font_size = 120
outline_size = 24
outline_color = Color(0, 0, 0, 1)

[node name="new_character_select" type="Node2D"]
script = ExtResource("1_c5uuy")

[node name="Background" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.74902)
position = Vector2(1168, 552)
scale = Vector2(3.2, 3.2)
texture = ExtResource("2_kjqh1")

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 610.0
offset_top = 220.0
offset_right = 1310.0
offset_bottom = 728.0
theme_override_constants/h_separation = 100
columns = 5

[node name="Ally1Spot" type="ColorRect" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="Position" type="Label" parent="GridContainer/Ally1Spot"]
layout_mode = 0
offset_left = 2.0
offset_top = -57.0
offset_right = 101.0
offset_bottom = 50.0
text = "Back
"
label_settings = SubResource("LabelSettings_tbrfe")

[node name="Ally2Spot" type="ColorRect" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="Position" type="Label" parent="GridContainer/Ally2Spot"]
layout_mode = 0
offset_left = -15.0
offset_top = -56.0
offset_right = 117.0
offset_bottom = 51.0
text = "Middle
"
label_settings = SubResource("LabelSettings_tbrfe")

[node name="Ally3Spot" type="ColorRect" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="Position" type="Label" parent="GridContainer/Ally3Spot"]
layout_mode = 0
offset_left = -13.0
offset_top = -57.0
offset_right = 119.0
offset_bottom = -5.0
text = "Middle"
label_settings = SubResource("LabelSettings_tbrfe")

[node name="Ally4Spot" type="ColorRect" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="Position" type="Label" parent="GridContainer/Ally4Spot"]
layout_mode = 0
offset_left = -3.0
offset_top = -57.0
offset_right = 100.0
offset_bottom = -5.0
text = "Front"
label_settings = SubResource("LabelSettings_tbrfe")

[node name="Gap" type="Control" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="Gap5" type="Control" parent="GridContainer"]
custom_minimum_size = Vector2(100, 300)
layout_mode = 2

[node name="Gap2" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="Gap3" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="Gap4" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="Gap6" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="FireGirl" type="Container" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_l2ywx")
grid_snap = Vector2(100, 100)

[node name="Sprite2D" type="Sprite2D" parent="GridContainer/FireGirl"]
position = Vector2(46, 51)
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_p148i")

[node name="Blastoise" type="Container" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_l2ywx")
grid_snap = Vector2(100, 100)

[node name="Sprite2D" type="Sprite2D" parent="GridContainer/Blastoise"]
position = Vector2(46, 51)
texture = ExtResource("5_i4hyv")

[node name="Venasaur" type="Container" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_l2ywx")
grid_snap = Vector2(100, 100)

[node name="Sprite2D" type="Sprite2D" parent="GridContainer/Venasaur"]
position = Vector2(46, 51)
scale = Vector2(0.39, 0.39)
texture = ExtResource("6_2gi26")

[node name="Pikachu" type="Container" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_l2ywx")
grid_snap = Vector2(100, 100)

[node name="Sprite2D" type="Sprite2D" parent="GridContainer/Pikachu"]
position = Vector2(46, 51)
scale = Vector2(0.35, 0.35)
texture = ExtResource("7_0rorh")

[node name="Golem" type="Container" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_l2ywx")
grid_snap = Vector2(100, 100)

[node name="Sprite2D" type="Sprite2D" parent="GridContainer/Golem"]
position = Vector2(46, 51)
scale = Vector2(0.35, 0.35)
texture = SubResource("CompressedTexture2D_g3rqs")

[node name="CharacterInfo" type="Label" parent="."]
offset_left = 47.0
offset_top = 260.0
offset_right = 367.0
offset_bottom = 347.0
text = "Charizard
"
label_settings = SubResource("LabelSettings_ghnwa")

[node name="Base_HP" type="Label" parent="CharacterInfo"]
layout_mode = 0
offset_left = 30.0
offset_top = 90.0
offset_right = 209.0
offset_bottom = 141.0
text = "Base HP: "
label_settings = SubResource("LabelSettings_p148i")

[node name="SkillInfo1" parent="CharacterInfo" instance=ExtResource("8_hnda8")]
layout_mode = 1
offset_left = 4.0
offset_top = 218.0
offset_right = 4.0
offset_bottom = 218.0

[node name="SkillInfo2" parent="CharacterInfo" instance=ExtResource("8_hnda8")]
layout_mode = 1
offset_left = 8.0
offset_top = 416.0
offset_right = 8.0
offset_bottom = 416.0

[node name="Label" type="Label" parent="CharacterInfo"]
layout_mode = 0
offset_left = 12.0
offset_top = 149.0
offset_right = 305.0
offset_bottom = 206.0
text = "Starting Skills"
label_settings = SubResource("LabelSettings_vlp3o")

[node name="Begin Run" type="Button" parent="."]
offset_left = 691.0
offset_top = 850.0
offset_right = 1235.0
offset_bottom = 986.0
theme_override_font_sizes/font_size = 100
text = "Begin Run"

[node name="Title" type="Label" parent="."]
offset_left = 3.0
offset_top = 20.0
offset_right = 1920.0
offset_bottom = 140.0
text = "Choose Your Characters!"
label_settings = SubResource("LabelSettings_0i11v")
horizontal_alignment = 1

[connection signal="drag_ended" from="GridContainer/FireGirl" to="." method="_on_charizard_drag_ended"]
[connection signal="mouse_entered" from="GridContainer/FireGirl" to="." method="_on_charizard_mouse_entered"]
[connection signal="drag_ended" from="GridContainer/Blastoise" to="." method="_on_blastoise_drag_ended"]
[connection signal="mouse_entered" from="GridContainer/Blastoise" to="." method="_on_blastoise_mouse_entered"]
[connection signal="drag_ended" from="GridContainer/Venasaur" to="." method="_on_venasaur_drag_ended"]
[connection signal="mouse_entered" from="GridContainer/Venasaur" to="." method="_on_venasaur_mouse_entered"]
[connection signal="drag_ended" from="GridContainer/Pikachu" to="." method="_on_pikachu_drag_ended"]
[connection signal="mouse_entered" from="GridContainer/Pikachu" to="." method="_on_pikachu_mouse_entered"]
[connection signal="drag_ended" from="GridContainer/Golem" to="." method="_on_golem_drag_ended"]
[connection signal="mouse_entered" from="GridContainer/Golem" to="." method="_on_golem_mouse_entered"]
[connection signal="pressed" from="Begin Run" to="." method="_on_begin_run_pressed"]
